--- a/src/app/checkout/checkout.component.scss
+++ b/src/app/checkout/checkout.component.scss
@@ -20,7 +20,7 @@ footer {
 }
 
 
-.login-page {
+.checkout-page {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,7 +39,7 @@ footer {
             padding-bottom: 10px;
             font-size: 32px;
         }
-        .login-form {
+        .checkout-form {
             min-width: 100% !important;
             padding: 20px;
             background: #fff;
