--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -11,10 +11,10 @@
 <main>
 
   
-<div class="login-page">
+<div class="checkout-page">
     <div class="content">
        
-        <form class="login-form" fxFlex  >
+        <form class="checkout-form" fxFlex  >
             <div class="text-center">
                 <h3 class="app-name">Checkout Form</h3>
             </div>
